# jump-probability-cup-forecaster

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: forecast.yml  scheduler.yml
docs/: follow-up-recommendations.md  optimized-prompt.md  research-ranking.md  system-design.md
reports/: espn-match-stats.json  external-match-sources.json  forecast-audit-external-notes.md  forecast-audit-latest.json  forecast-audit-latest.md  forecast-audit-recommendations.md
scripts/: audit_forecasts.py  fetch_espn_match_stats.py  repair_boundary_forecasts.py  search_model_weights.py
src/probability_cup_bot/: __init__.py  anthropic_adapter.py  calibration.py  cli.py  config.py  dashboard.py  evidence.py  firecrawl.py  forecaster.py  market_analysis.py  models.py  news_monitor.py  openai_adapter.py  prompts.py  runner.py  scheduler.py  scoring.py  sportspredict.py  state.py  usage.py
tests/: test_anthropic_adapter.py  test_calibration.py  test_dashboard.py  test_evidence.py  test_forecaster.py  test_market_analysis.py  test_runner.py  test_scheduler.py  test_scoring.py  test_sportspredict.py  test_usage.py
