[project]
name = "probability-cup-forecaster"
version = "0.1.0"
description = "Autonomous LLM forecasting bot for the Jump Trading Probability Cup"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "openai>=1.93.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[project.scripts]
probability-cup-bot = "probability_cup_bot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

